--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,7 +377,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero-bg.jpg") top center no-repeat;
+  background: url("../img/hero-bg_4.jpg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 85px;
