--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,8 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -978,4 +980,30 @@ section {
   background: #0fb259;
   color: #fff;
   text-decoration: none;
+}
+
+.slide_content:nth-child(3) {
+    background: rgb(226, 192, 192);
+}
+
+.slide_content:nth-child(4) {
+    background: rgb(236, 236, 149);
+}
+
+@keyframes slide {
+    20% {
+        margin-left: 0px;
+    }
+
+    40% {
+        margin-left: calc(-600px * 1);
+    }
+
+    60% {
+        margin-left: calc(-600px * 2);
+    }
+
+    80% {
+        margin-left: calc(-600px * 3);
+    }
 }
